--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -20,7 +20,7 @@
       <!-- 100 Motels poster -->
 
 
-      <div class="" id="intro">
+      <!-- <div class="" id="intro">
         <img src="http://www.zappa.com/stufftoget/wallpaper/images/downloads/200_Motels_1024.jpg" class="img-rounded">
         <small>&copy; <a href="http://www.zappa.com/stufftoget/wallpaper/index.html">Zappa.com</a></small>
       </div>
@@ -31,7 +31,7 @@
           <p class="lead"> Wouldn't you like to know.</p>
         </div>
         <a href="#">Back to top</a>
-      </div>
+      </div> -->
 
     </div><!--/span-->
   </div><!--/row-->
