--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,24 +1,75 @@
 <div class="container narrow-container">
   <div class="big-logo">
-    <h2>100 Motels | <small><%= link_to "sign-in", login_path, class: "" %></small></h2>
+    <div class="row-fluid">
+      <div class="span11">
+        <h2>100 Motels | <small><%= link_to "sign-in", login_path, class: "" %></small></h2>
+      </div>
+    </div>
   </div>
   <div class="row-fluid">
     <div class="span12 headline paper-folds">
-      <h2>
-        <span>Making Risky Events Happen</span>
-      </h2> <br>
-      <h4> <article>As Artists we want to perform but sometimes it just isn't worth it. <br>
-       Will you get paid?<br>
-       Will anyone show up? <br>
-       Don't waste your time and money - next time you hit the road join us at 100 Motels.</h4></article><br>
-      <%= link_to "Try it!", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %>
-    </div>
-  </div>
-  <div class="row-fluid">
-    <div class="span12">
+      <div class="row-fluid">
+        <div class="span1">
+          <h2>
+            <article class="pull-left">(much) Better Events for Artists & Organizers</article>
+          </h2> <br>
+        </div>
+        <!-- <div class="span7">
+          <h4> <article>As Artists we want to perform but sometimes it just isn't worth it. <br>
+           Will you get paid?<br>
+           Will anyone show up? <br>
+           Will you in fact end up paying to perform? <br>
+           100 Motels answers these questions for you, before you hit the road.</h4></article><br>
+          <%= link_to "Try the Demo", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %>
+          <%= link_to "Browse existing Events" %>
+        </div> -->
+      </div>
     </div>
   </div>
 </div>
-<div class="row-fluid">
-      <div class="search"><%#= render 'search' %></div>
+<hr>
+<div class="container">
+  <div class="row-fluid">
+    <div class="span6">
+      <h3 class="h4"><i class="icon-lightbulb"></i> What's the idea?</h3>
+      <p class="">
+        Artists today are able to record and distribute their work freely, globally and without unecessary interference - I'd like live performance to be that way too.</p>
+       <p>100 Motels comprises <strong>risk-free Web Ticketing and Crowdfunding</strong> in one, the foundation I hope for a service that will
+        achieve that goal.
+      </p>
+      <a href="/pricing" class="link-icon link-icon--more">more</a>
+    </div>
+    <div class="span6">
+      <h3 class="h4"><i class="icon-money"></i> Low fees</h3>
+      <p class="">
+        If you're an Artist performing CC licensed work 100 Motel's fee is discounted to only 1% of the ticket price, othewise it's 2.5%.</p>
+        <p>Credit card processing is handled by Stripe who currently charge 2.9% plus 30c per transaction.</p>
+      </p>
+      <a href="/pricing" class="link-icon link-icon--more">more</a>
+    </div>
   </div>
+  <div class="row-fluid">
+    <div class="span6">
+      <h3 class="h4"><i class="icon-magic"></i> Any 'magical' features?</h3>
+      <p class="">
+        How about free refunds? Not magical perhaps but pretty cool all the same.</p>
+        If you need to cancel your event at the last moment and refund your customers they won't be out of pocket, Stripe and 100 Motels fees will be refunded along with the ticket-price.</p>
+        <p> When I said risk-free I really meant it!
+      </p>
+      <a href="/pricing" class="link-icon link-icon--more">more</a>
+    </div>
+    <div class="span6">
+      <h3 class="h4"><i class="icon-beaker"></i> Experiment with your Event</h3>
+      <p class="">
+        100 Motels allows you to test and alter your events without any financial consequences for you or your customers. You can change the date, discount the ticket price or do whatever it takes to make your event viable.
+      </p>
+      <p>Upcoming features include the ability to split, copy and reschedule events so that customer orders are never wasted.</p>
+      <a href="/pricing" class="link-icon link-icon--more">more</a>
+    </div>
+</div>
+
+
+
+<!-- <div class="row-fluid-fluid">
+      <div class="search"><%#= render 'search' %></div>
+  </div> -->
