--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,20 +9,12 @@
   <div class="row-fluid">
     <div class="span12 headline paper-folds">
       <div class="row-fluid">
-        <div class="span1">
+        <div class="span7">
           <h2>
-            <article class="pull-left">(much) Better Events for Artists & Organizers</article>
+            <article>(much) Better Events for Artists & Organizers</article>
           </h2> <br>
+          <%= link_to "Try it free", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %>
         </div>
-        <!-- <div class="span7">
-          <h4> <article>As Artists we want to perform but sometimes it just isn't worth it. <br>
-           Will you get paid?<br>
-           Will anyone show up? <br>
-           Will you in fact end up paying to perform? <br>
-           100 Motels answers these questions for you, before you hit the road.</h4></article><br>
-          <%= link_to "Try the Demo", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %>
-          <%= link_to "Browse existing Events" %>
-        </div> -->
       </div>
     </div>
   </div>
@@ -33,15 +25,16 @@
     <div class="span6">
       <h3 class="h4"><i class="icon-lightbulb"></i> What's the idea?</h3>
       <p class="">
-        Artists today are able to record and distribute their work freely, globally and without unecessary interference - I'd like live performance to be that way too.</p>
+        Web-age Performing Artists have never had is so good in terms of inpiration, instruction, creation and distribution. But we haven't as yet figured out how to replicate the performing opportunites that are afforded to commerically backed acts. As an artist myself I really want that to change.</p>
        <p>100 Motels comprises <strong>risk-free Web Ticketing and Crowdfunding</strong> in one, the foundation I hope for a service that will
         achieve that goal.
       </p>
-      <a href="/pricing" class="link-icon link-icon--more">more</a>
+      <a href="/pricing" class="">more <i class="icon-double-angle-right"></i></a>
     </div>
     <div class="span6">
       <h3 class="h4"><i class="icon-money"></i> Low fees</h3>
       <p class="">
+        <p>First off you can take as many orders as you like <strong>without incurring fees</strong> - that only happens when you draw funds into your bank account.</p>
         If you're an Artist performing CC licensed work 100 Motel's fee is discounted to only 1% of the ticket price, othewise it's 2.5%.</p>
         <p>Credit card processing is handled by Stripe who currently charge 2.9% plus 30c per transaction.</p>
       </p>
@@ -52,24 +45,25 @@
     <div class="span6">
       <h3 class="h4"><i class="icon-magic"></i> Any 'magical' features?</h3>
       <p class="">
-        How about free refunds? Not magical perhaps but pretty cool all the same.</p>
-        If you need to cancel your event at the last moment and refund your customers they won't be out of pocket, Stripe and 100 Motels fees will be refunded along with the ticket-price.</p>
-        <p> When I said risk-free I really meant it!
+        How about free refunds? Not magical perhaps but pretty cool all the same. When I said risk-free I really meant it!
       </p>
+      <p>Other stuff I'm currently working on include the ability to split, copy and reschedule events so that customer orders aren't wasted if a event doesn't go ahead as orginally planned, and also a cross-platform mobile app with some native features like barcode scanning.</p>
       <a href="/pricing" class="link-icon link-icon--more">more</a>
     </div>
     <div class="span6">
-      <h3 class="h4"><i class="icon-beaker"></i> Experiment with your Event</h3>
+      <h3 class="h4"><i class="icon-beaker"></i> Experiment with your Events</h3>
       <p class="">
-        100 Motels allows you to test and alter your events without any financial consequences for you or your customers. You can change the date, discount the ticket price or do whatever it takes to make your event viable.
-      </p>
-      <p>Upcoming features include the ability to split, copy and reschedule events so that customer orders are never wasted.</p>
+        One of the main ideas behind 100 Motels is to ecourage Artists and Organizers, to try risky or uncertain event opportunities where previously t
+        failure may have discounted out of hand.</p>
+
+        <p>To that end, 100 Motels allows you to test and alter your events without any financial consequences for you or your customers. You can change the date, discount the ticket price, run events against each other or do whatever it takes to hit funding or attendence targets.</p>
+
       <a href="/pricing" class="link-icon link-icon--more">more</a>
     </div>
 </div>
-
-
-
-<!-- <div class="row-fluid-fluid">
-      <div class="search"><%#= render 'search' %></div>
-  </div> -->
+<hr>
+<div class="container">
+  <div class="row-fluid-fluid">
+      <div class="search"><%= render 'search' %></div>
+  </div>
+</div>
