--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -18,14 +18,18 @@
     background: rgba(0, 0, 0, 0.7);
     padding: 10px;
   }
-  // box-shadow: 3px 3px 10px 5px #000;
-  // padding: 20px;
-  // background-color: #565656;
-  // color: transparent;
-  // text-shadow: 0px 2px 3px rgba(255,255,255,0.3);
-  // -webkit-background-clip: text;
-  //  -moz-background-clip: text;
-  // background-clip: text;
+  article {
+    @include media-below($handheld-max){
+      font-size: 80%;
+      line-height: 80%;
+    }
+  }
+  a {
+    @include media-below($handheld-max){
+      font-size: 90%;
+      line-height: 90%;
+    }
+  }
 }
 
 
@@ -80,7 +84,7 @@
     @include media-between($small-min, $small-max) {
       min-width: 500px;
     }
-    min-width: 320px;
+    min-width: 300px;
     height: 60px;
   }
   button {
@@ -89,17 +93,12 @@
   }
 }
 
-.jumbotron {
-  h1 {
-    @include media-below($handheld-max){
-      font-size: 110%;
-      line-height: 110%;
-    }
-  }
-  p {
+.landing-info {
+  padding-bottom: 10px;
+  p, h3 {
     @include media-below($handheld-max){
     font-size: 110%;
-    line-height: 110%
+    line-height: 110%;
     }
   }
 }
