--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -20,23 +20,23 @@
   </div>
 </div>
 <hr>
-<div class="container">
+<div class="container landing-info">
   <div class="row-fluid">
     <div class="span6">
-      <h3 class="h4"><i class="icon-lightbulb"></i> What's the idea?</h3>
+      <h3 class=""><i class="icon-lightbulb"></i> What's the idea?</h3>
       <p class="">
-        Artists have never had is so good in many ways - from creative aides to global channels of distribution, we can produce our work and expose it to a large audience without giving a second thought to pre-Web Age commercial roadblocks.</p>
+        In some ways, Artists have never had it so good. From creative aids to global channels of distribution, we can produce our work and expose it to a large audience without ceding control or diluting our artistic preorgative.</p>
         <p>
-        But we are still living in the past when it comes the performance of our work, there isn't an obviously better solution to the traditional ways of organizing events and tours - that's what I'm trying to change .</p>
-       <p>100 Motels comprises <strong>a Web Ticketing and Crowdfunding</strong> platform in one, engineered above all else to provide a risk-free funding environment for its Users.
+        But we are still living in the past when it comes the <strong>performance of our work</strong>. There isn't an obviously better solution to the traditional ways of organizing events and tours and that's what I'm trying to change.</p>
+       <p>100 Motels comprises <strong>a Web Ticketing and Crowdfunding</strong> platform in one, engineered above all else to provide a <strong>risk-free</strong> funding environment for its users.
       </p>
       <a href="/pricing" class="">more </a>
     </div>
     <div class="span6">
-      <h3 class="h4"><i class="icon-money"></i> Low fees</h3>
+      <h3 class=""><i class="icon-money"></i> Low fees</h3>
       <p class="">
-        <p>Firstly, you can take as many orders as you like <strong>without incurring fees</strong> - that only happens when you draw funds into your bank account.</p>
-        If you're an Artist performing CC licensed work 100 Motel's fee is discounted to only 1% of the ticket price, othewise it's 2.5%.</p>
+        <p>You can take as many orders as you like for your event <strong>without incurring fees</strong> - that only happens when you draw funds into your bank account.</p>
+        If you're an Artist performing CC licensed work 100 Motel's fee is discounted to <strong>only 1%</strong> of the ticket price, othewise it's <strong>2.5%.</strong></p>
         <p>Credit card processing is handled by Stripe who currently charge 2.9% plus 30c per transaction.</p>
         <p>Fees are added-on. Whatever you set your ticket price to, the full amount gets deposited into your bank account. </p>
       </p>
@@ -45,16 +45,16 @@
   </div>
   <div class="row-fluid">
     <div class="span6">
-      <h3 class="h4"><i class="icon-magic"></i> Any 'magical' features?</h3>
+      <h3 class=""><i class="icon-magic"></i> Any 'magical' features?</h3>
       <p class="">
-        How about free refunds? Not magical perhaps but pretty important all the same. When I said risk-free I really meant it! Also there are no time-limits on how long you can hold an order before charging it.
+        How about <strong>free refunds</strong>? Not magical perhaps but pretty important all the same. When I said risk-free I really meant it! Also there are <strong>no time-limits</strong> on how long you can hold an order before charging it so longer funding windows are possible.
       </p>
-      <p>One cool feature that I'm currently working on is the ability to split, copy and reschedule events so that customer orders aren't wasted if a event doesn't go ahead as orginally planned.  </p>
+      <p>Upcoming features include the ability to split, copy and reschedule events so that customer orders aren't wasted if demand for tickets exceed or fall short of anticipated sales.  </p>
       <p> I'm also coding a cross-platform mobile app with some native features like barcode scanning, handy for keeping track of admissions on the night.</p>
       <a href="/pricing" class="link-icon link-icon--more">more</a>
     </div>
     <div class="span6">
-      <h3 class="h4"><i class="icon-beaker"></i> Experiment with your Events</h3>
+      <h3 class=""><i class="icon-beaker"></i> Experiment with your Events</h3>
       <p class="">
         100 Motels allows for the trying of Events where the viability level is completely unknown beforehand. </p>
         <p>The aim is to put event organizers and their customers in a position where they have literally nothing to lose and everything to gain from attempting an Event.</p>
@@ -67,7 +67,6 @@
 <hr>
 <div class="container">
   <div class="row-fluid-fluid">
-      <div class="search"><%= render 'search' %></div>
-      <p></p>
+      <div class="span12 search"><%= render 'search' %></div>
   </div>
 </div>
