--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -79,10 +79,11 @@
 
 .search {
   max-width: 940px;
-  margin: 20px auto;
+  margin: 20px 0;
   input[type="text"] {
     @include media-between($small-min, $small-max) {
       min-width: 500px;
+      margin: 0 auto;
     }
     min-width: 300px;
     height: 60px;
@@ -94,6 +95,7 @@
 }
 
 .landing-info {
+   max-width: 940px;
   padding-bottom: 10px;
   p, h3 {
     @include media-below($handheld-max){
