--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -18,8 +18,9 @@
       </div>
     </div>
   </div>
+  <hr>
 </div>
-<hr>
+
 <div class="container landing-info">
   <div class="row-fluid">
     <div class="span6">
@@ -67,6 +68,6 @@
 <hr>
 <div class="container">
   <div class="row-fluid-fluid">
-      <div class="span12 search"><%= render 'search' %></div>
+      <div class="span12"><%= render 'search' %></div>
   </div>
 </div>
