--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row-fluid">
-		<div class="span6"><%= render 'search' %></div>
+		<div class="span6 search"><%= render 'search' %></div>
 		<div class="span2 offset1 pull-right">
 			<div class="btn-group">
         <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
