added title field contstrained input text lendght but need to show validation errors dynamically

--- a/app/views/organizer/events/_form.html.erb
+++ b/app/views/organizer/events/_form.html.erb
@@ -3,7 +3,8 @@
 
   <fieldset>
     <%= f.input :visible, :label => "Visible to Public?" %>
-    <%= f.input :artist, label: "Artist / Event Name", placeholder: "Crete Boom" %>
+    <%= f.input :title, label: "Event Title", placeholder: "A Headline for your Event" %>
+    <%= f.input :artist, label: "Artists", placeholder: "List the Performers / Attractions" %>
     <%= f.input :venue, label: "Name of Venue", placeholder: "The Rickshaw" %>
     <%= f.input :new_location, label: "Location of Venue", hint: "Dublin, Ireland" %>
     <%= f.input :capacity, placeholder: "100" %>
