--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -25,7 +25,7 @@
 							<a class="thumbnail" href='<%= event_path(event) %>'>
                 <%= filepicker_image_tag event.image, width: 200, height: 200, fit: 'crop' if event.image.present? %>
                 <div class="event-index-artists">
-									<h3><%= event.artist %><br><small>crete boom, porn trauma and more</small></h3>
+									<h3><%= event.title %><br><small><%= event.artist %></small></h3>
 									<h6><%= event.location.city %> - <%= event.date.strftime('%d/%m/%Y') %></h6>
 								</div>
 							</a>
