--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -33,7 +33,7 @@
 			</div>
 			<div class="row-fluid">
 				<div class="span6 event-poster" data-url='<%= @event.image %>'>
-					<h3><small>Featuring:</small> The Crete Boom, The Porn Trauma and more!</h3>
+					<h3><small>Featuring:</small> <%= @event.artist %></h3>
 					<h3><small>We need </small><%= @event.sales %><small> more patrons to pay for this show please help!</small></h3>
 					<h3><i class="icon-twitter-sign"></i> <i class="icon-facebook-sign"></i></h3>
 				</div>
