--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -21,6 +21,17 @@
     }
       // min-width: 200px;
   }
+
+  .purr {
+    position: fixed;
+    top: 30px;
+    right: 100px;
+    width: 250px;
+    padding: 20px;
+    background-color: #FCC;
+    border: solid 2px #666;
+    &:first-letter { text-transform: uppercase };
+  }
 }
 
 //event show
