--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -36,6 +36,10 @@
 }
 
 //event show
+.poster-information {
+  // min-height: 300px;
+}
+
 .flex-video {
   position: relative;
   padding-top: 25px;
@@ -73,32 +77,42 @@
   text-align: center;
 }
 
-// organizer/event/show charge buttons
-// were being styled automagically as buttons
+// organizer/event/show
+.number-stats ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.number-stats ul li:first-child {
+  border-left: none;
+}
+.number-stats ul li {
+  text-align: center;
+  width: 43px;
+  padding: 0 12px;
+  border-left: 1px solid #5E5E5E;
+  list-style: none;
+  display: inline-block;
+}
+
+// buttons styled to look like dropdown menu links
 
 .link-button {
   text-decoration: none;
   border: none;
   background-color: transparent;
-  display: block;
-  padding: 3px 20px;
-  clear: both;
   font-weight: normal;
+  padding: 8px 12px;
   line-height: 20px;
-  color: #333333;
-  white-space: nowrap;
+  color: #08C;
+  border: 1px solid #DDD;
 
   &:hover,
   &:focus {
-    color: #ffffff;
-    background-color: #0081c2;
-    background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
-    background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
-    background-image: -o-linear-gradient(top, #0088cc, #0077b3);
-    background-image: linear-gradient(to bottom, #0088cc, #0077b3);
-    background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
+    z-index: 2;
+    border-color: #ddd;
+    background-color: #eeeeee;
   }
 }
 
