--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -1,74 +1,89 @@
-<div class="row-fluid">
-  <div class="span2" id="button-menu">
+
+
+
+
+      <% unless @event.state_cancelled? || current_user.api_key.nil? %>
+      <% end %>
+<div class="fow-fluid">
+  <div class="span12">
+    <ul class="inline">
       <div class="btn-group">
         <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-          <%= @event.artist %>
+          Choose Event
           <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
           <% @events.each do |e| %>
-          <li><%= link_to "#{e.artist} | #{e.venue} | #{e.date.strftime('%d %b')}", organizer_event_path(e) %></li>
+          <li><%= link_to "#{e.title} | #{e.venue} | #{e.date.strftime('%d %b')}", organizer_event_path(e) %></li>
           <% end %>
         </ul>
       </div>
+    </ul>
   </div>
-  <div class="span4"><%= render 'search' %></div>
-  <div class="span2">
-    <%= form_tag  charge_or_refund_orders_path, method: :post  do %>
-    <%= link_to image_tag('blue.png'), '/auth/stripe_connect', class: "" unless current_user.api_key %>
-      <% unless @event.state_cancelled? || current_user.api_key.nil? %>
-        <div class="btn-group">
-
-          <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-              Charge
-              <span class="caret"></span>
+</div>
+<div class="row-fluid">
+  <aside class="span2">
+    <hr>
+    <div class="accordion" id="accordion2">
+      <div class="accordion-group">
+        <div class="accordion-heading">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+            Charge Options
           </a>
-          <ul class="dropdown-menu">
-            <li></li>
-              <li><%= link_to "Charge All (inc.failed)", charge_all_orders_path(event_id: @event.id), method: :post %></li>
+        </div>
+        <div id="collapseOne" class="accordion-body collapse in">
+          <div class="accordion-inner">
+            <%= form_tag  charge_or_refund_orders_path, method: :post  do %>
+            <ul class="nav nav-tabs nav-stacked">
+              <li><%= link_to "Charge All", charge_all_orders_path(event_id: @event.id), method: :post, class: "" %></li>
               <li><%= submit_tag "Charge Selected", name: 'charge', class: "link-button" if current_user.api_key %></li>
               <li><%= submit_tag "Refund Selected", name: 'refund', class: "link-button" if current_user.api_key %></li>
               <li><%= submit_tag "Cancel Selected", name: 'cancel', class: "link-button" if current_user.api_key %></li>
-              <li class="divider"></li>
-              <li><%= link_to "Cancel Event", cancel_organizer_event_path(@event), data: { confirm: "Are you sure you want to cancel the current event?" } %></li>
-          </ul>
+              <li><%= link_to "Cancel Event", cancel_organizer_event_path(@event), data: { confirm: "Are you sure you want to cancel the current event?" }, class: "" %></li>
+            </ul>
+          </div>
         </div>
-      <% end %>
-  </div>
-  <div class="span2">
-    <div class="btn-group">
-      <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-          Options
-          <span class="caret"></span>
-      </a>
-      <ul class="dropdown-menu">
-        <li><%= link_to "View Event", event_path(@event) unless @event.state_cancelled? %></li>
-        <li><%= link_to "New Event", new_organizer_event_path(@event) %></li>
-        <li><%= link_to "Edit Event", edit_organizer_event_path(@event) unless @event.state_cancelled? %></li>
-        <li><%= link_to "Orders PDF", organizer_event_path(@event, format: "pdf") %></li>
-        <li><%= link_to "Tickets PDF", organizer_event_tickets_path(@event, format: "pdf") %></li>
-        <li><%= link_to "Check-in View", organizer_event_tickets_path(@event) unless @event.state_cancelled? %></li>
-      </ul>
+      </div>
+      <div class="accordion-group">
+        <div class="accordion-heading">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+            Event Options
+          </a>
+        </div>
+        <div id="collapseTwo" class="accordion-body collapse">
+          <div class="accordion-inner">
+            <ul class="nav nav-tabs nav-stacked">
+              <li><%= link_to "View Event", event_path(@event), class: "" unless @event.state_cancelled? %></li>
+              <li><%= link_to "New Event", new_organizer_event_path(@event), class: "" %></li>
+              <li><%= link_to "Edit Event", edit_organizer_event_path(@event), class: "" unless @event.state_cancelled? %></li>
+              <li><%= link_to "Orders PDF", organizer_event_path(@event, format: "pdf"), class: "" %></li>
+              <li><%= link_to "Tickets PDF", organizer_event_tickets_path(@event, format: "pdf"), class: "" %></li>
+              <li><%= link_to "Check-in View", organizer_event_tickets_path(@event), class: "" unless @event.state_cancelled? %></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-group">
+        <div class="accordion-heading">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+            Filter Orders
+          </a>
+        </div>
+        <div id="collapseThree" class="accordion-body collapse">
+          <div class="accordion-inner">
+            <ul class="nav nav-tabs nav-stacked">
+              <li><a href="<%= organizer_event_path(@event) %>">All<span class="badge badge-info pull-right"><%= @event.orders.sum(:quantity) %></span></a></li>
+              <li><a href="<%= request.path + '?pending=true' %>">Ordered<span class="badge badge-warning pull-right"><%= @event.orders.pending.sum(:quantity) %></span></a></li>
+              <li><a href="<%= request.path + '?tickets_sent=true' %>">Paid<span class="badge badge-success pull-right"><%= @event.orders.tickets_sent.sum(:quantity) %></span></a></li>
+              <li><a href="<%= request.path + '?failed=true' %>">Failed<span class="badge badge-important pull-right"><%= @event.orders.failed.sum(:quantity) %></span></a></li>
+              <li><a href="<%= request.path + '?refunded=true' %>">Refunded<span class="badge badge-inverse pull-right"><%= @event.orders.refunded.sum(:quantity) %></span></a></li>
+              <li><a href="<%= request.path + '?refunded=true' %>">Cancelled<span class="badge pull-right"><%= @event.orders.cancelled.sum(:quantity) %></span></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
-  </div> <!-- /button menu -->
-</div> <!-- /row -->
-<div class="row-fluid">
-  <aside class="span2">
-    <ul class="nav nav-tabs nav-stacked">
-      <li><a href="<%= organizer_event_path(@event) %>">All<span class="badge badge-info pull-right"><%= @event.orders.sum(:quantity) %></span></a></li>
-      <li><a href="<%= request.path + '?pending=true' %>">Ordered<span class="badge badge-warning pull-right"><%= @event.orders.pending.sum(:quantity) %></span></a></li>
-      <li><a href="<%= request.path + '?tickets_sent=true' %>">Paid<span class="badge badge-success pull-right"><%= @event.orders.tickets_sent.sum(:quantity) %></span></a></li>
-      <li><a href="<%= request.path + '?failed=true' %>">Failed<span class="badge badge-important pull-right"><%= @event.orders.failed.sum(:quantity) %></span></a></li>
-      <li><a href="<%= request.path + '?refunded=true' %>">Refunded<span class="badge badge-inverse pull-right"><%= @event.orders.refunded.sum(:quantity) %></span></a></li>
-      <li><a href="<%= request.path + '?refunded=true' %>">Cancelled<span class="badge pull-right"><%= @event.orders.cancelled.sum(:quantity) %></span></a></li>
-    </ul>
   </aside>
-  <div class="span10">
-    <ul class="inline">
-  <li><h3>Funding: <%= number_to_currency(@event.orders.funding.sum(:quantity) * @event.ticket_price) %> <small>(inc. ordered, paid, net of fees)</small></h3></li>
-  <li class="pull-right"><h3>Capacity: <%= @event.capacity %> <small> (<%= @event.capacity - @event.orders.funding.sum(:quantity) %> tickets remaining)</small></h3></li>
-</ul>
-  </div>
   <div class="span10">
       <table class="table table-striped table-bordered" id="organizer-customers">
         <thead>
@@ -78,11 +93,11 @@
                 <i class="icon-ok"></i>
               </button>
             </th>
-            <th>Customer Name</th>
+            <th>Name</th>
             <th>Email</th>
             <th>Admits:</th>
             <th>Order Total</th>
-            <th colspan="1" >Status</th>
+            <th>Status</th>
           </tr>
         </thead>
         <tbody>
@@ -99,6 +114,6 @@
         </tbody>
       </table>
     <% end %>
+    <%= will_paginate @orders %>
   </div> <!-- /table form -->
-  <%= will_paginate @orders %>
 </div> <!-- /row -->
