--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,18 @@
 <div class="container">
-	<div class="row">
-		<div id="organizer-pic" class="span2" align="center">
-      <p><%= @user.avatar %></p>
-			<p><%= @user.edit %></p>
-		</div>
-    <div class="span9">
-      <div class="row-fluid">
-        <div class="span3">
-          <dl>
-            <dt>Email</dt>
-            <dd><%= @user.email %></dd>
-            <dt>Username</dt>
-            <dd><%= @user.name %></dd>
-          </dl>
-        </div>
-        <div class="span3">
-          <%= @user.card %>
-        </div>
-        <div class="span3">
-          <h4>Update Card</h4>
-          <p><%= @user.update_card %></p>
-        </div>
-      </div>
+	<div class="row-fluid">
+    <div class="span6">
+      <dl>
+        <dt>Your Avatar</dt>
+        <dd><%= @user.avatar %></dd>
+        <dt>Your username</dt>
+        <dd><%= @user.name %></dd>
+        <dt>Your email</dt>
+        <dd><%= @user.email %></dd>
+      </dl>
+      <%= link_to "Reset your password" %>
     </div>
-	</div>
+    <div class="span6">
+      <h3>Your Purchases</h3>
+    </div>
+  </div>
 </div>
