--- a/app/views/notifier/order_created.text.erb
+++ b/app/views/notifier/order_created.text.erb
@@ -1,3 +1,5 @@
 Thanks <%= @order.name %>
 
-Your order reference is 7554654646.
+Your order reference is <%= @order.uuid %>
+
+Tickets will be dispatched when your card has been successfully charged.
