--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,9 +56,9 @@
       <div class="container">
         <ul class="inline">
           <li>© 100 Motels Ltd 2013</li>
-          <li><%= link_to "Terms of Service" %></li>
-          <li><%= link_to "Legal and Privacy" %></li>
-          <li><%= link_to "Info and Help" %></li>
+          <li><%= link_to "Terms of Service", info_path %></li>
+          <li><%= link_to "Legal and Privacy", info_path %></li>
+          <li><%= link_to "Info and Help", info_path %></li>
         </ul>
       </div>
     </footer>
