--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -17,22 +17,7 @@
         </ul>
     </div> <!-- /span3 -->
     <div class="span9">
-      <!-- 100 Motels poster -->
-
-
-      <!-- <div class="" id="intro">
-        <img src="http://www.zappa.com/stufftoget/wallpaper/images/downloads/200_Motels_1024.jpg" class="img-rounded">
-        <small>&copy; <a href="http://www.zappa.com/stufftoget/wallpaper/index.html">Zappa.com</a></small>
-      </div>
-
-      <div class="" id="how">
-        <div class=""><h1>How it Works</h1></div>
-        <div class="">
-          <p class="lead"> Wouldn't you like to know.</p>
-        </div>
-        <a href="#">Back to top</a>
-      </div> -->
-
+      <p class="lead">Docs coming soon!</p>
     </div><!--/span-->
   </div><!--/row-->
   <hr>
